# linkscope

./: .gitignore  Makefile  PLAN.md  README.md  UPSTREAM.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
artifacts/demo/: benchmark_v2_scoreboard.json  calibration.json  compact_model.json  cpo_scenarios.json  dashboard.html  heater_tuning.json  link_metrics.json  recruiter_report.json  recruiter_report.md  ring_behavioral.va  surrogate.json  wafer_summary.json
data/benchmarks/: README.md  benchmark_v2_scoreboard.csv  cpo_scenarios.csv  manifest.json  thermal_drift_sweep.csv  tx_power_sweep.csv  wafer_grid.csv  wdm_sweep.csv  yield_monte_carlo.csv
data/measured/: README.md  fake_measured_ring_sweep.csv
docs/: agent_debate.md  limitations.md  model_equations.md  recruiter_brief.md  requirements_traceability.md  technical_writeup.md  units-and-conventions.md
docs/refocus/: baseline-audit.md
experiments/e001/: experiment.md
experiments/e001/configs/: canonical.json  smoke.json
notebooks/: 01_link_walkthrough.ipynb  02_calibration_and_tuning.ipynb
results/e001/: manifest.json  summary.csv  summary.json
scripts/: build_demo_artifacts.py  e001_smoke.py
src/photon_link_lab/: __init__.py  backend.py  calibration.py  cli.py  compact_model.py  config.py  cpo.py  datasets.py  devices.py  equalizer.py  filters.py  link.py  metrics.py  ml.py  plots.py  report.py  scoreboard.py  surrogate.py  sweeps.py  symbols.py  units.py  variation.py  wdm.py
tests/integration/: test_calibration.py  test_cli.py  test_link.py
tests/unit/: test_compact_model.py  test_cpo.py  test_devices.py  test_metrics.py  test_report.py  test_scoreboard.py  test_surrogate.py  test_symbols.py  test_units.py  test_variation.py  test_wdm.py
